--- a/styles/collage.css
+++ b/styles/collage.css
@@ -21,4 +21,23 @@ img{
 .box-collage{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px){
+    .row{
+        flex-direction: column;
+        height: auto;
+    }
+    .box-collage{
+        grid-template-columns: 1fr;
+    }
+}
+/* medium devices */
+@media screen and (min-width: 576px) and (max-width: 992px){
+    .row{
+        flex-direction: column;
+        height: auto;
+
 }
